Use ResourcePatternUtils which is better able to load from spring style resource folders